[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydatavault"
version = "0.1.0"
description = "GUI application for managing heterojunction fabrication and measurement data"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5",
    "pyflexlab",
    "pyomnix",
]

[project.scripts]
pydatavault = "pydatavault.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pydatavault*"]
